# fastapi-best-practices-starter

./: .env.example  .gitignore  Makefile  README.md  USER_MODULE_GUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml  run.sh
.amazonq/rules/: model-standards.md
alembic/: env.py  script.py.mako
alembic/versions/: 35f91021ceef_update_user_model_with_standard_fields.py  4be086396e93_init_table.py
app/: main.py
app/api/v1/: router.py
app/business/: models.py
app/business/api/: business.py  router.py
app/business/crud/: crud_business.py
app/business/schemas/: business.py
app/business/services/: business_service.py
app/core/: base_schema.py  config.py  docs.py  exceptions.py  logging.py  resp.py  result.py  security.py
app/db/: base.py  crud_base.py  init_db.py  mixins.py
app/dependencies/: __init__.py  auth.py  database.py  pagination.py  permission.py
app/domains/news/: crud.py  models.py  router.py  schemas.py
app/domains/user/: crud.py  models.py  router.py  schemas.py
app/system/: models.py
app/system/api/: auth.py  dict.py  menu.py  role.py  role_menu.py  router.py  user.py
app/system/crud/: __init__.py  crud_dict.py  crud_dict_data.py  crud_menu.py  crud_role.py  crud_role_menu.py  crud_user.py
app/system/schemas/: auth.py  dict.py  menu.py  role.py  role_menu.py  user.py
app/system/services/: auth_service.py  dict_service.py  menu_service.py  permission_service.py  role_service.py  user_service.py
scripts/: init_admin.py  init_menus.sql
